fixed overflow of stack trace in steps panel

--- a/ui/src/app/run-results/run-results.component.sass
+++ b/ui/src/app/run-results/run-results.component.sass
@@ -44,6 +44,8 @@
   line-height: 2.286em
   height: 2.286em
 
+::ng-deep .ui-tabview .ui-tabview-panels .ui-tabview-panel
+  overflow-x: scroll
 
 // location column in issues table
 .location
